# FionaOgre

./: .gitignore  CMakeLists.txt  FionaGoPro.cpp  FionaGoPro.h  FionaOgre.cpp  FionaOgre.h  FionaOgre.sln  FionaOgre.vcxproj  FionaOgre.vcxproj.filters  MovableText.cpp  MovableText.h  OculusPerCal.cpp  OculusPerCal.h  OgreDotScene.cpp  OgreDotScene.h  VROgreAction.cpp  VROgreAction.h  WordCake.cpp  WordCake.h  main.cpp
Release/: FionaOgre.lastbuildstate
Release/FionaOgre.tlog/: CL.read.1.tlog  CL.write.1.tlog  FionaOgre.lastbuildstate  cl.command.1.tlog
SDK/Media/: ogreSampleScene.xml
SDK/Media/SkyX/: SkyX_Skydome.fragment
SDK/Media/data/: ogresmartbody.py
SDK/Media/fonts/: proper-definitions.fontdef
SDK/Media/models/: butterfly.mesh  l_forearm.mesh  l_hand.mesh  l_upperarm.mesh  net.mesh  r_forearm.mesh  r_hand.mesh  r_upperarm.mesh
SDK/Media/particle/: smoke.particle
SDK/Media/volumeTerrain/: triplanarReference.program  triplanarReferencePS.glsl  triplanarReferenceVS.glsl  volumeTerrain.cfg
SDK/include/OGRE/: Ogre.h  OgreRenderQueue.h
SDK/include/sb/: PABlend.cpp  SBAnimationState.cpp  SBAnimationState.h  SBAssetHandlerCOLLADA.cpp  SBAssetHandlerObj.cpp  SBAssetHandlerPly.cpp  SBAssetManager.cpp  SBAssetManager.h  SBBoneBusManager.cpp  SBCharacter.cpp  SBCharacter.h  SBCollisionManager.cpp  SBCommandManager.cpp  SBCommandManager.cpp.bak  (+39 more)
SDK/lib/: Plugin_ParticleUniverse.exp  Plugin_ParticleUniverse_D.exp
ogitor/RunPath/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
(+779 files in other folders)
